Fix: missing background image

--- a/jobs-search/styles/globals.css
+++ b/jobs-search/styles/globals.css
@@ -18,4 +18,7 @@
   .job_description.text-primary > * {
     @apply !bg-transparent;
   }
+  .header {
+    background-image: url("/backgroundImg.png");
+  }
 }
